--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#"> My Digitl Portfolio</a></li>
-                <li><a href="#">Calculater</a></li>
+            
+                <li><a href="calculater.html">Calculater</a></li>
                 <!-- Add more project links here -->
-            </ul>
+            <
         </div>
     </section>
 
